--- a/cadastro/index.html
+++ b/cadastro/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <main>
+        <a href=""></a>
         <section>
             <h1>Bem vindo!</h1>
             <img src="../logo.jpg" alt="logo">
