--- a/cadastroProduto/cadastro.html
+++ b/cadastroProduto/cadastro.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <form>
+    <form id="form">
         <label>Nome do produto</label>
         <br>
         <input type="text" name="nome" id="nome">
