--- a/home/index.html
+++ b/home/index.html
@@ -9,9 +9,14 @@
     <main>
         <h1>Doces</h1>
         <ul id="doces">
-
         </ul>
-        <a href="cadastro.html">Cadastrar</a>
+        <a href="../cadastroProduto/cadastro.html">Cadastrar</a>
+        <br>
+        <a href="../venda">Lançar venda</a>
+        <br>
+        <a href="../lucrodiario/dia.html">Ganhos diario</a>
+        <br>
+        <a href="../lucromensal/mes.html">Ganhos mensal</a>
     </main>
     <script type="module" src="./script.js"></script>
 </body>
