--- a/cadastro/index.html
+++ b/cadastro/index.html
@@ -10,7 +10,7 @@
     <main>
         <section>
             <h1>Bem vindo!</h1>
-            <img src="../logo.jpg" alt="logo">
+            <img src="../img/logo.png" alt="logo">
         </section>
         <form>
             <h3>Cadastre-se</h3>
@@ -20,7 +20,7 @@
             </div>
             <div>
                 <label for="input-user">Usuario</label>
-                <input placeholder="digite seu nome de usuário..." type="email" id="input-email">
+                <input placeholder="digite seu nome de usuário..." type="text" id="input-user">
             </div>
             <div>
                 <label for="input-password">Senha</label>
