--- a/home/index.html
+++ b/home/index.html
@@ -4,19 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body>
     <main>
-        <h1>Doces</h1>
-        <ul id="doces">
-        </ul>
-        <a href="../cadastroProduto/cadastro.html">Cadastrar</a>
-        <br>
-        <a href="../venda">Lançar venda</a>
-        <br>
-        <a href="../lucrodiario/dia.html">Ganhos diario</a>
-        <br>
-        <a href="../lucromensal/mes.html">Ganhos mensal</a>
+            <a href="../cadastroProduto/cadastro.html">Cadastrar</a>
+            <br>
+            <a href="../venda">Lançar venda</a>
+            <br>
+            <a href="../lucrodiario/dia.html">Ganhos diario</a>
+            <br>
+            <a href="../lucromensal/mes.html">Ganhos mensal</a>
     </main>
     <script type="module" src="./script.js"></script>
 </body>
