--- a/lucromensal/mes.html
+++ b/lucromensal/mes.html
@@ -4,21 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body>
     <main>
         <form>
             <p>Escolha um mes</p>
             <select name="mes" id="mes">
-                <option value="1">Janeiro</option>
-                <option value="2">Fevereiro</option>
-                <option value="3">Março</option>
-                <option value="4">Abril</option>
-                <option value="5">Maio</option>
-                <option value="6">Junho</option>
-                <option value="7">Julho</option>
-                <option value="8">Agosto</option>
-                <option value="9">Setembro</option>
+                <option value="01">Janeiro</option>
+                <option value="02">Fevereiro</option>
+                <option value="03">Março</option>
+                <option value="04">Abril</option>
+                <option value="05">Maio</option>
+                <option value="06">Junho</option>
+                <option value="07">Julho</option>
+                <option value="08">Agosto</option>
+                <option value="09">Setembro</option>
                 <option value="10">Outubro</option>
                 <option value="11">Novembro</option>
                 <option value="12">Dezembro</option>
@@ -26,12 +27,7 @@
             <input type="submit" value="Enviar">
         </form>
 
-        <p>CUSTOS FIXOS</p>
-        <p>Aluguel:1500</p>
-        <p>Luz:800</p>
-        <p>Agua:150</p>
-        <p>Internet:100</p>
-        <p>Total:2550R$</p>
+        <p>Total de custos fixos: 2550R$</p>
 
         <script src="script.js"></script>
     </main>
