--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <main>
         <section>
             <h1>Bem vindo!</h1>
-            <img src="./logo.jpg" alt="logo">
+            <img src="/img/logo.png" alt="logo">
         </section>
         <form>
             <h3>Login</h3>
